2002-07-20  Han-Wen  <hanwen@cs.uu.nl>

	* autogen.sh (mscripts): find and check version number of
	autoconf. Complain if 2.53 is not found.

2002-07-20  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* benchmark-guile.in:  Copied from check-guile.in and adapted for
	use with benchmarks.

	* Makefile.am:  Recurse into the benchmark-suite subdir.

	* configure.in:  Added benchmarking files.

2002-07-12  Gary Houston  <ghouston@arglist.com>

	* configure.in: check dynamic linking before modules.  Add dynl.c
	if dynamic linking is available, i.e., unless --with-modules=no
	was given to configure.

2002-07-09  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	* autogen.sh: Patch libltdl/ltdl.c to avoid a nasty bug in
	libtool-1.4.2.

2002-07-07  Marius Vollmer  <mvo@zagadka.ping.de>

	* autogen.sh: Do not copy INSTALL from workbook since it is not
	uniform across branches.
	* INSTALL: Re-added to repository.
	
	Crosscompiling and Cygwin fixes from Jan Nieuwenhuizen.  Thanks!
	
	* autogen.sh: Only fix libltdl/configure.in if it exists.  Current
	libtool CVS does not need this fix.

	* configure.in (AC_LIBTOOL_WIN32_DLL): Add for shared Cygwin
	build.
	Add --with-cc-for-build option to re-enable cross building.
	Add --with-guile-for-build option to re-enable cross building.

2002-06-30  Gary Houston  <ghouston@arglist.com>

	* autogen.sh: Changed the path to the scripts directory.
	In libltdl, run aclocal before autoconf and automake: this
	eliminated various warnings after upgrading to newer automake.

2002-05-22  Marius Vollmer  <mvo@zagadka.ping.de>

        From John W. Eaton <jwe@bevo.che.wisc.edu>

	* configure.in (AC_CHECK_FUNCS): Check for copysign.

2002-05-10  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	* libguile.h: Added inclusion of "extensions.h".

2002-05-06  Marius Vollmer  <mvo@zagadka.ping.de>

	* configure.in: Include <sys/types.h> before <netinet/in.h> when
	checking vor IPv6.  This is for NetBSD 1.5.  Thanks to Greg
	Troxel!

	From John W. Eaton.
	